<resources>
    <string name="app_name">Rello</string>
    <string name="splash">splash</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="log_in">LOG IN</string>
    <string name="logo">logo</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">SIGN IN</string>
    <string name="personal_information">Personal Information</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">E-mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Continue">Continue</string>
    <string name="next">Next</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="country_region">Country/Region</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="by_creating_an_account_you_agree_to_our_terms_and_privacy_policy">By creating an account, you agree to our terms and privacy policy.</string>
    <string name="previous">Previous</string>
    <string name="discover">Discover</string>
    <string name="find_local_events_happening_near_you_and_post_your_hosted_events">Find local events happening near you and post your hosted events.</string>
    <string name="groups">Groups</string>
    <string name="find_all_of_your_groups_you_can_also_join_other_groups_and_create_your_own_groups_under_this_tab">Find all of your groups. You can also join other groups and create your own groups under this tab.</string>
    <string name="chat">Chat</string>
    <string name="chat_with_those_in_your_group">Chat with those in your group.</string>
    <string name="calendar">Calendar</string>
    <string name="keep_track_of_events_you_and_your_groups_are_going_to">Keep track of events you and your groups are going to.</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="john_doe">John Doe</string>
    <string name="johndoe_rello_com">JohnDoe@rello.com</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="your_scheduled_events">Your Scheduled Events</string>
    <string name="your_messages">Your Messages</string>
    <string name="events">Events</string>
    <string name="your_groups">Your Groups</string>
    <string name="join_other_group">Join Other Group</string>
    <string name="your_current_groups">Your Current Groups</string>
    <string name="group_creation">Group Creation</string>
    <string name="group_name">Group Name</string>
    <string name="description">Description</string>
    <string name="group_profile_photo">Group Profile Photo</string>
    <string name="upload_group_profile_photo">Upload group profile photo</string>
    <string name="create_group">Create Group</string>
    <string name="search_groups">Search Groups</string>
    <string name="results">Results</string>
    <string name="user_information">User Information</string>
    <string name="more_functionality_to_come_on_future_updates">More functionality to come on future updates.</string>
    <string name="search_events">Search Events</string>
    <string name="go">Go</string>
    <string name="browse">Browse</string>
    <string name="group_information_should_be_shown_here">Group Information should be shown here.</string>
    <string name="events_creation">Events Creation</string>
    <string name="event_name">Event Name</string>
    <string name="date_of_event">Date of Event</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="event_photo">Event Photo</string>
    <string name="upload_event_photo">Upload Event Photo</string>
    <string name="create_event">Create Event</string>
    <string name="create_an_event">Create an event</string>
    <string name="memories">Memories</string>
    <string name="private_event">Private Event</string>
    <string name="send">SEND</string>
    <string name="enter_message">Enter message</string>
</resources>
