<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#45556B"
    tools:context=".onboarding_4_Activity">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/calendar"
        android:textColor="#FFC107"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="304dp"
        android:layout_height="71dp"
        android:layout_marginTop="28dp"
        android:lineSpacingExtra="10sp"
        android:text="@string/keep_track_of_events_you_and_your_groups_are_going_to"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFC107"
        android:textSize="18sp"
        android:textStyle="italic"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="183dp"
        android:layout_height="193dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:srcCompat="@android:drawable/ic_menu_my_calendar" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="136dp"
        android:background="#FFC107"
        android:text="@string/let_s_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />


</androidx.constraintlayout.widget.ConstraintLayout>