<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#45556B"
    tools:context=".onboarding_1_Activity">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/discover"
        android:textColor="#FFC107"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="349dp"
        android:layout_height="68dp"
        android:layout_marginTop="28dp"
        android:lineSpacingExtra="10sp"
        android:text="@string/find_local_events_happening_near_you_and_post_your_hosted_events"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFC107"
        android:textSize="18sp"
        android:textStyle="italic"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="183dp"
        android:layout_height="193dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:srcCompat="@android:drawable/btn_star_big_on"
        android:contentDescription="@string/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>