<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#45556B"
    tools:context=".create_eventActivity">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#FFC107"
        android:foregroundGravity="center_horizontal"
        android:gravity="center"
        android:text="@string/events_creation"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bottom_toolbar"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="#5D6C85"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/chats_btn"
        android:layout_width="103dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:background="#0045556B"
        android:tint="#FFC107"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_toolbar"
        app:layout_constraintStart_toEndOf="@+id/groups_btn"
        app:layout_constraintTop_toTopOf="@+id/bottom_toolbar"
        app:srcCompat="@android:drawable/sym_action_chat"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/groups_btn"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:background="#0045556B"
        android:tint="#FFC107"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_toolbar"
        app:layout_constraintStart_toEndOf="@+id/events_btn"
        app:layout_constraintTop_toTopOf="@+id/bottom_toolbar"
        app:srcCompat="@android:drawable/ic_menu_myplaces"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/events_btn"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:background="#0045556B"
        android:tint="#FFC107"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottom_toolbar"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/calendar_btn"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:background="#0045556B"
        android:tint="#FFC107"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/chats_btn"
        app:layout_constraintTop_toTopOf="@+id/bottom_toolbar"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_my_calendar"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/event_name"
        android:textColor="#FFC107"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="342dp"
        android:layout_height="26dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/date_of_event"
        android:textColor="#FFC107"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="342dp"
        android:layout_height="26dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="date"
        android:text="@string/dd_mm_yyyy"
        android:textColor="#61000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/description"
        android:textColor="#FFC107"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="342dp"
        android:layout_height="100dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/event_photo"
        android:textColor="#FFC107"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText8" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:background="#00FFFFFF"
        android:text="@string/upload_event_photo"
        android:textColor="#FFEB3B"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginBottom="56dp"
        android:background="#FFC107"
        android:text="@string/create_event"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>